eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: financial-sentiment-ui
  namespace: financial-sentiment-app
spec:
  selector:
    app: financial-sentiment-ui
  ports:
  - name: http
    port: 80
    targetPort: 8501
  type: ClusterIP
